project card overflow fixed

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -476,7 +476,7 @@ img {
     height: 100%;
     width: 100%;
     opacity: 0;
-    overflow: scroll;
+    overflow: hidden;
     text-overflow: ellipsis;
     transition: .5s ease;
     background-image: linear-gradient(0deg, var(--highlight) 0%, rgb(0, 0, 0, 0) 100%);
